# src/auth/dto/index.ts
@@ -1,5 +1,4 @@
 export * from "./login.dto";
-export * from "./refresh-token.dto";
 export * from "./signup.dto";
 export * from "./validate-token.dto";
 export * from "./registerbyemail.dto";
