# src/auth/dto/refresh-token.dto.ts
@@ -1,10 +1,0 @@
-import { ApiProperty } from '@nestjs/swagger';
-import { IsJWT, IsNotEmpty, IsString } from 'class-validator';
-
-export class RefreshTokenDto {
-  @IsString()
-  @IsNotEmpty()
-  @IsJWT()
-  @ApiProperty()
-  refreshToken: string;
-}
